--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,6 +38,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'English wit and humor'
 - !lcc 'PR'
+- GITenberg
 tableOfContents: Doing a cathedral -- The instantaneous process -- In the cause of
   charity -- The classical scholar in reduced circumstances -- Rus in urbe -- Catching
   the early boat -- Society's next craze -- An ideal interviewer -- Saturday night
